Elf/Syntax/Grammar/ElfParser.cs
// $ANTLR 3.1.1 Elf.g 2009-02-26 22:55:54
// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
namespace  Elf.Syntax.Grammar 
{

using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public partial class ElfParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"DEF", 
		"RTIMPL", 
		"VAR", 
		"RET", 
		"IF", 
		"THEN", 
		"ELSE", 
		"END", 
		"POS", 
		"NEG", 
		"MUL", 
		"DIV", 
		"ADD", 
		"SUB", 
		"POW", 
		"LT", 
		"GT", 
		"LTE", 
		"GTE", 
		"EQ", 
		"NEQ", 
		"NOT", 
		"AND", 
		"OR", 
		"ASSIGN", 
		"SCRIPT", 
		"DECL", 
		"CLASS", 
		"FUNC", 
		"ARGS", 
		"BLOCK", 
		"PAREXPR", 
		"EXPR", 
		"CALL", 
		"INDEX", 
		"LPAREN", 
		"RPAREN", 
		"LBRACK", 
		"RBRACK", 
		"COMMA", 
		"SEMIC", 
		"DOT", 
		"Identifier", 
		"WhiteSpace", 
		"EOL", 
		"MultiLineComment", 
		"SingleLineComment", 
		"DecimalLiteral", 
		"StringLiteral", 
		"DecimalDigit", 
		"DecimalIntegerLiteral", 
		"BSLASH", 
		"DQUOTE", 
		"SQUOTE", 
		"IdentifierStart", 
		"IdentifierPart", 
		"Loophole"
    };

    public const int LT = 19;
    public const int CLASS = 31;
    public const int LBRACK = 41;
    public const int DEF = 4;
    public const int SingleLineComment = 50;
    public const int GTE = 22;
    public const int DQUOTE = 56;
    public const int SUB = 17;
    public const int NOT = 25;
    public const int DecimalDigit = 53;
    public const int AND = 26;
    public const int DecimalIntegerLiteral = 54;
    public const int EOF = -1;
    public const int LTE = 21;
    public const int Identifier = 46;
    public const int LPAREN = 39;
    public const int IF = 8;
    public const int INDEX = 38;
    public const int RET = 7;
    public const int RPAREN = 40;
    public const int EOL = 48;
    public const int EXPR = 36;
    public const int Loophole = 60;
    public const int POW = 18;
    public const int THEN = 9;
    public const int POS = 12;
    public const int COMMA = 43;
    public const int ARGS = 33;
    public const int WhiteSpace = 47;
    public const int VAR = 6;
    public const int EQ = 23;
    public const int DOT = 45;
    public const int IdentifierPart = 59;
    public const int MultiLineComment = 49;
    public const int ADD = 16;
    public const int RBRACK = 42;
    public const int SCRIPT = 29;
    public const int ELSE = 10;
    public const int IdentifierStart = 58;
    public const int SQUOTE = 57;
    public const int DecimalLiteral = 51;
    public const int MUL = 14;
    public const int StringLiteral = 52;
    public const int NEQ = 24;
    public const int PAREXPR = 35;
    public const int DECL = 30;
    public const int FUNC = 32;
    public const int BLOCK = 34;
    public const int NEG = 13;
    public const int OR = 27;
    public const int ASSIGN = 28;
    public const int GT = 20;
    public const int CALL = 37;
    public const int DIV = 15;
    public const int RTIMPL = 5;
    public const int SEMIC = 44;
    public const int END = 11;
    public const int BSLASH = 55;

    // delegates
    // delegators



        public ElfParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public ElfParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return ElfParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Elf.g"; }
    }


    public override void ReportError(RecognitionException e)
    {
    	throw Elf.Exceptions.Parser.RecognitionExceptionHelper.Report(this, e);
    }

    private void PromoteEOL(ParserRuleReturnScope rule)
    {
    	// Get current token and its type (the possibly offending token).
    	IToken lt = input.LT(1);
    	int la = lt.Type;
    	
    	// We only need to promote an EOL when the current token is offending (not a SEMIC, EOF, RBRACE, EOL or MultiLineComment).
    	// EOL and MultiLineComment are not offending as they're already promoted in a previous call to this method.
    	// Promoting an EOL means switching it from off channel to on channel.
    	// A MultiLineComment gets promoted when it contains an EOL.
    	if (!(la == SEMIC || la == EOF || la == EOL || la == MultiLineComment))
    	{
    		// Start on the possition before the current token and scan backwards off channel tokens until the previous on channel token.
    		for (int ix = lt.TokenIndex - 1; ix > 0; ix--)
    		{
    			lt = input.Get(ix);
    			if (lt.Channel == Token.DEFAULT_CHANNEL)
    			{
    				// On channel token found: stop scanning.
    				break;
    			}
    			else if (lt.Type == EOL || (lt.Type == MultiLineComment && System.Text.RegularExpressions.Regex.IsMatch(lt.Text, @".*\r\n|\r|\n")))
    			{
    				// We found our EOL: promote the token to on channel, position the input on it and reset the rule start.
    				lt.Channel = Token.DEFAULT_CHANNEL;
    				input.Seek(lt.TokenIndex);
    				if (rule != null)
    				{
    					rule.Start = lt;
    				}
    				break;
    			}
    		}
    	}
    }


    public class token_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "token"
    // Elf.g:125:1: token : ( keyword | literal | Identifier | punctuator | oneOfOperators );
    public ElfParser.token_return token() // throws RecognitionException [1]
    {   
        ElfParser.token_return retval = new ElfParser.token_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken Identifier3 = null;
        ElfParser.keyword_return keyword1 = default(ElfParser.keyword_return);

        ElfParser.literal_return literal2 = default(ElfParser.literal_return);

        ElfParser.punctuator_return punctuator4 = default(ElfParser.punctuator_return);

        ElfParser.oneOfOperators_return oneOfOperators5 = default(ElfParser.oneOfOperators_return);


        object Identifier3_tree=null;

        try 
    	{
            // Elf.g:126:2: ( keyword | literal | Identifier | punctuator | oneOfOperators )
            int alt1 = 5;
            switch ( input.LA(1) ) 
            {
            case DEF:
            case RTIMPL:
            case VAR:
            case RET:
            case IF:
            case THEN:
            case ELSE:
            case END:
            	{
                alt1 = 1;
                }
                break;
            case DecimalLiteral:
            case StringLiteral:
            	{
                alt1 = 2;
                }
                break;
            case Identifier:
            	{
                alt1 = 3;
                }
                break;
            case LPAREN:
            case RPAREN:
            case LBRACK:
            case RBRACK:
            case COMMA:
            case SEMIC:
            	{
                alt1 = 4;
                }
                break;
            case POS:
            case NEG:
            case MUL:
            case DIV:
            case ADD:
            case SUB:
            case POW:
            case LT:
            case GT:
            case LTE:
            case GTE:
            case EQ:
            case NEQ:
            case NOT:
            case AND:
            case OR:
            case ASSIGN:
            	{
                alt1 = 5;
                }
                break;
            	default:
            	    NoViableAltException nvae_d1s0 =
            	        new NoViableAltException("", 1, 0, input);

            	    throw nvae_d1s0;
            }

            switch (alt1) 
            {
                case 1 :
                    // Elf.g:126:4: keyword
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_keyword_in_token455);
                    	keyword1 = keyword();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, keyword1.Tree);

                    }
                    break;
                case 2 :
                    // Elf.g:127:4: literal
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_literal_in_token460);
                    	literal2 = literal();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, literal2.Tree);

                    }
                    break;
                case 3 :
                    // Elf.g:128:4: Identifier
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	Identifier3=(IToken)Match(input,Identifier,FOLLOW_Identifier_in_token465); 
                    		Identifier3_tree = (object)adaptor.Create(Identifier3);
                    		adaptor.AddChild(root_0, Identifier3_tree);


                    }
                    break;
                case 4 :
                    // Elf.g:129:4: punctuator
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_punctuator_in_token470);
                    	punctuator4 = punctuator();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, punctuator4.Tree);

                    }
                    break;
                case 5 :
                    // Elf.g:130:4: oneOfOperators
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_oneOfOperators_in_token475);
                    	oneOfOperators5 = oneOfOperators();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, oneOfOperators5.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "token"

    public class punctuator_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "punctuator"
    // Elf.g:158:1: punctuator : ( LPAREN | RPAREN | LBRACK | RBRACK | COMMA | SEMIC );
    public ElfParser.punctuator_return punctuator() // throws RecognitionException [1]
    {   
        ElfParser.punctuator_return retval = new ElfParser.punctuator_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken set6 = null;

        object set6_tree=null;

        try 
    	{
            // Elf.g:159:2: ( LPAREN | RPAREN | LBRACK | RBRACK | COMMA | SEMIC )
            // Elf.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set6 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= LPAREN && input.LA(1) <= SEMIC) ) 
            	{
            	    input.Consume();
            	    adaptor.AddChild(root_0, (object)adaptor.Create(set6));
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "punctuator"

    public class semic_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "semic"
    // Elf.g:171:1: semic : ( SEMIC | EOF | EOL | MultiLineComment );
    public ElfParser.semic_return semic() // throws RecognitionException [1]
    {   
        ElfParser.semic_return retval = new ElfParser.semic_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken set7 = null;

        object set7_tree=null;


        	PromoteEOL(retval);

        try 
    	{
            // Elf.g:176:2: ( SEMIC | EOF | EOL | MultiLineComment )
            // Elf.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set7 = (IToken)input.LT(1);
            	if ( input.LA(1) == EOF || input.LA(1) == SEMIC || (input.LA(1) >= EOL && input.LA(1) <= MultiLineComment) ) 
            	{
            	    input.Consume();
            	    adaptor.AddChild(root_0, (object)adaptor.Create(set7));
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "semic"

    public class keyword_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "keyword"
    // Elf.g:186:1: keyword : ( DEF | RTIMPL | VAR | RET | IF | THEN | ELSE | END );
    public ElfParser.keyword_return keyword() // throws RecognitionException [1]
    {   
        ElfParser.keyword_return retval = new ElfParser.keyword_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken set8 = null;

        object set8_tree=null;

        try 
    	{
            // Elf.g:187:2: ( DEF | RTIMPL | VAR | RET | IF | THEN | ELSE | END )
            // Elf.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set8 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= DEF && input.LA(1) <= END) ) 
            	{
            	    input.Consume();
            	    adaptor.AddChild(root_0, (object)adaptor.Create(set8));
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "keyword"

    public class oneOfOperators_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "oneOfOperators"
    // Elf.g:201:1: oneOfOperators : ( nonAssignOperator | ASSIGN );
    public ElfParser.oneOfOperators_return oneOfOperators() // throws RecognitionException [1]
    {   
        ElfParser.oneOfOperators_return retval = new ElfParser.oneOfOperators_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken ASSIGN10 = null;
        ElfParser.nonAssignOperator_return nonAssignOperator9 = default(ElfParser.nonAssignOperator_return);


        object ASSIGN10_tree=null;

        try 
    	{
            // Elf.g:202:2: ( nonAssignOperator | ASSIGN )
            int alt2 = 2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0 >= POS && LA2_0 <= OR)) )
            {
                alt2 = 1;
            }
            else if ( (LA2_0 == ASSIGN) )
            {
                alt2 = 2;
            }
            else 
            {
                NoViableAltException nvae_d2s0 =
                    new NoViableAltException("", 2, 0, input);

                throw nvae_d2s0;
            }
            switch (alt2) 
            {
                case 1 :
                    // Elf.g:202:4: nonAssignOperator
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_nonAssignOperator_in_oneOfOperators746);
                    	nonAssignOperator9 = nonAssignOperator();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, nonAssignOperator9.Tree);

                    }
                    break;
                case 2 :
                    // Elf.g:203:4: ASSIGN
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	ASSIGN10=(IToken)Match(input,ASSIGN,FOLLOW_ASSIGN_in_oneOfOperators751); 
                    		ASSIGN10_tree = (object)adaptor.Create(ASSIGN10);
                    		adaptor.AddChild(root_0, ASSIGN10_tree);


                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "oneOfOperators"

    public class nonAssignOperator_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "nonAssignOperator"
    // Elf.g:206:1: nonAssignOperator : ( POS | NEG | MUL | DIV | ADD | SUB | POW | LT | GT | LTE | GTE | EQ | NEQ | NOT | AND | OR );
    public ElfParser.nonAssignOperator_return nonAssignOperator() // throws RecognitionException [1]
    {   
        ElfParser.nonAssignOperator_return retval = new ElfParser.nonAssignOperator_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken set11 = null;

        object set11_tree=null;

        try 
    	{
            // Elf.g:207:2: ( POS | NEG | MUL | DIV | ADD | SUB | POW | LT | GT | LTE | GTE | EQ | NEQ | NOT | AND | OR )
            // Elf.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set11 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= POS && input.LA(1) <= OR) ) 
            	{
            	    input.Consume();
            	    adaptor.AddChild(root_0, (object)adaptor.Create(set11));
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "nonAssignOperator"

    public class literal_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "literal"
    // Elf.g:229:1: literal : ( DecimalLiteral | StringLiteral );
    public ElfParser.literal_return literal() // throws RecognitionException [1]
    {   
        ElfParser.literal_return retval = new ElfParser.literal_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken set12 = null;

        object set12_tree=null;

        try 
    	{
            // Elf.g:230:2: ( DecimalLiteral | StringLiteral )
            // Elf.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set12 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= DecimalLiteral && input.LA(1) <= StringLiteral) ) 
            	{
            	    input.Consume();
            	    adaptor.AddChild(root_0, (object)adaptor.Create(set12));
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "literal"

    public class expression_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expression"
    // Elf.g:311:1: expression : assignmentExpression ;
    public ElfParser.expression_return expression() // throws RecognitionException [1]
    {   
        ElfParser.expression_return retval = new ElfParser.expression_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        ElfParser.assignmentExpression_return assignmentExpression13 = default(ElfParser.assignmentExpression_return);



        try 
    	{
            // Elf.g:312:2: ( assignmentExpression )
            // Elf.g:312:4: assignmentExpression
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_assignmentExpression_in_expression1206);
            	assignmentExpression13 = assignmentExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, assignmentExpression13.Tree);

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expression"

    public class primaryExpression_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "primaryExpression"
    // Elf.g:317:1: primaryExpression : ( Identifier | literal | lpar= LPAREN expression RPAREN -> ^( PAREXPR[$lpar, \"PAREXPR\"] expression ) );
    public ElfParser.primaryExpression_return primaryExpression() // throws RecognitionException [1]
    {   
        ElfParser.primaryExpression_return retval = new ElfParser.primaryExpression_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken lpar = null;
        IToken Identifier14 = null;
        IToken RPAREN17 = null;
        ElfParser.literal_return literal15 = default(ElfParser.literal_return);

        ElfParser.expression_return expression16 = default(ElfParser.expression_return);


        object lpar_tree=null;
        object Identifier14_tree=null;
        object RPAREN17_tree=null;
        RewriteRuleTokenStream stream_RPAREN = new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_LPAREN = new RewriteRuleTokenStream(adaptor,"token LPAREN");
